# PPFR

./: CMakeLists.txt  LICENSE  README.md  ios_eval.cpp  ios_init.cpp
include/: include.hpp
include/LWEscheme/: LWE_64.hpp
include/PolynomialRing/: Poly_ring_64.hpp
include/RLWEscheme/: LT.hpp  Multiplication.hpp  RLWE_64.hpp
include/RandomNumberGenerator/: rand.hpp
include/test/: ios_enc_vec_dec.hpp  ios_enc_vec_enc.hpp  ios_enc_vec_eval.hpp  ios_enc_vec_init.hpp
